--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!--check-->
-    <link rel="icon" href="%PUBLIC_URL%/silvia.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/silvia.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Silvia's Portfolio" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=DM+Mono:wght@300;400;500&display=swap"
       rel="stylesheet"
@@ -18,7 +15,7 @@
       src="https://kit.fontawesome.com/a22a8f4330.js"
       crossorigin="anonymous"
     ></script>
-    <title>Sil codes</title>
+    <title>Silvia's Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
