Add meta for previews

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!--check-->
     <link rel="icon" href="%PUBLIC_URL%/silvia.png" />
+    <meta property="og:title" content="Silvia's Portfolio" />
+    <meta
+      property="og:description"
+      content="This is my portfolio, get to know me and  see the code and deployment of my favorite projects"
+    />
+    <meta property="og:image" content="https://ibb.co/Tv7PzRG" />
+    <meta
+      property="og:url"
+      content="https://silviaespanagil.github.io/portfolio/"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Silvia's Portfolio" />
     <link
