Fix meta information

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,14 @@
     <link rel="icon" href="%PUBLIC_URL%/silvia.png" />
     <meta property="og:title" content="Silvia's Portfolio" />
     <meta
+      name="description"
       property="og:description"
-      content="This is my portfolio, get to know me and  see the code and deployment of my favorite projects"
+      content="This is my portfolio, developed in React I did it as I want you to know my developer junior and to see the code and deployment of my favorite projects"
     />
-    <meta property="og:image" content="https://ibb.co/Tv7PzRG" />
+    <meta
+      property="og:image"
+      content="https://i.ibb.co/tmvYyc6/Screenshot-2.png"
+    />
     <meta
       property="og:url"
       content="https://silviaespanagil.github.io/portfolio/"
